--- a/src/app/shared/ui-components/tag-result-list/tag-result-list.component.scss
+++ b/src/app/shared/ui-components/tag-result-list/tag-result-list.component.scss
@@ -39,9 +39,13 @@
 
 .tag-result-container-open {
   width: calc(100% + 4px);
-  height: 200px;
+  height: calc(200px + 4px);
+  margin: -2px;
+  padding: 2px;
+
+  overflow-y: scroll;
   @media (min-width: 992px) {
-    height: 230px;
+    height:  calc(230px + 4px);
   }
   transition: width 0.3s ease-in-out, height 0.3s ease-in-out;;
 }
